# project-kaoruko

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
kaoruko_derive/: Cargo.toml
kaoruko_derive/src/: lib.rs  types.rs
kaoruko_derive/tests/: config.rs  missing_description.rs  missing_variants.rs  parse.rs  test.rs
src/: bot.rs  command.rs  game.rs  main.rs  types.rs  utils.rs
