[package]
name = "kaoruko"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

kaoruko_derive = { path = "kaoruko_derive" }